<resources>
    <string name="app_name">DuAn1_Vinh</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nguyễn Thành Vinh</string>
    <string name="nav_header_subtitle">Vinhntph08047@fpt.edu.vn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Biều đồ thống kê</string>
    <string name="menu_gallery">Thêm khoản thu</string>
    <string name="menu_slideshow">Thêm khoản chi</string>
    <string name="menu_tools">Cài đặt</string>
    <string name="menu_share">Thống kê chi tiêt</string>
    <string name="menu_send">Về chúng tôi</string>
    <string name="menu_branch">Quản lí nhóm</string>
    <string name="slogan"><![CDATA[Ứng dụng quản lí chi tiêu cho bạn <3]]></string>
    <string name="them_nhom">Thêm nhóm</string>
    <array name="color">
        <item>C#FF6633</item>
        <item>C#FFB399</item>
        <item>C#FF33FF</item>
        <item>C#FFFF99</item>
        <item>C#00B3E6</item>
        <item>C#E6B333</item>
        <item>C#3366E6</item>
        <item>C#999966</item>
        <item>C#99FF99</item>
        <item>C#B34D4D</item>
        <item>C#80B300</item>
        <item>C#809900</item>
        <item>C#E6B3B3</item>
        <item>C#6680B3</item>
        <item>C#66991A</item>
        <item>C#FF99E6</item>
        <item>C#CCFF1A</item>
        <item>C#FF1A66</item>
        <item>C#E6331A</item>
        <item>C#33FFCC</item>
        <item>C#66994D</item>
        <item>C#B366CC</item>
        <item>C#4D8000</item>
        <item>C#B33300</item>
        <item>C#CC80CC</item>
        <item>C#66664D</item>
        <item>C#991AFF</item>
        <item>C#E666FF</item>
        <item>C#4DB3FF</item>
        <item>C#1AB399</item>
        <item>C#E666B3</item>
        <item>C#33991A</item>
        <item>C#CC9999</item>
        <item>C#B3B31A</item>
        <item>C#00E680</item>
        <item>C#4D8066</item>
        <item>C#809980</item>
        <item>C#E6FF80</item>
        <item>C#1AFF33</item>
        <item>C#999933</item>
        <item>C#FF3380</item>
        <item>C#CCCC00</item>
        <item>C#66E64D</item>
        <item>C#4D80CC</item>
        <item>C#9900B3</item>
        <item>C#E64D66</item>
        <item>C#4DB380</item>
        <item>C#FF4D4D</item>
        <item>C#99E6E6</item>
        <item>C#6666FF</item>
    </array>

    <array name="icon">
        <item>hinhicon0</item>
        <item>hinhicon1</item>
        <item>hinhicon2</item>
        <item>hinhicon3</item>
        <item>hinhicon4</item>
        <item>hinhicon5</item>
        <item>hinhicon6</item>
        <item>hinhicon7</item>
        <item>hinhicon8</item>
        <item>hinhicon9</item>
        <item>hinhicon10</item>
        <item>hinhicon11</item>
        <item>hinhicon12</item>
        <item>hinhicon13</item>
        <item>hinhicon14</item>
        <item>hinhicon15</item>
        <item>hinhicon16</item>
        <item>hinhicon17</item>
        <item>hinhicon18</item>
        <item>hinhicon19</item>
        <item>hinhicon20</item>
        <item>hinhicon21</item>
        <item>hinhicon22</item>
        <item>hinhicon23</item>
        <item>hinhicon24</item>
        <item>hinhicon25</item>
        <item>hinhicon26</item>
        <item>hinhicon27</item>
        <item>hinhicon28</item>
        <item>hinhicon29</item>
        <item>hinhicon30</item>
        <item>hinhicon31</item>
        <item>hinhicon32</item>
        <item>hinhicon33</item>
        <item>hinhicon34</item>
        <item>hinhicon35</item>
        <item>hinhicon36</item>
        <item>hinhicon37</item>
        <item>hinhicon38</item>
        <item>hinhicon39</item>
        <item>hinhicon40</item>
        <item>hinhicon41</item>
        <item>hinhicon42</item>
        <item>hinhicon43</item>
        <item>hinhicon44</item>
        <item>hinhicon45</item>
        <item>hinhicon46</item>
        <item>hinhicon47</item>
        <item>hinhicon48</item>
        <item>hinhicon49</item>

    </array>

</resources>
