<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/linechart"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/voucher"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/shoppingbasket"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/atm"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_branch"
            android:icon="@drawable/connection"
            android:title="@string/menu_branch" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/settings"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/group"
            android:title="@string/menu_send" />
    </group>

<!--    <item android:title="Communicate">-->
<!--        <menu>-->

<!--        </menu>-->
<!--    </item>-->

</menu>
