<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.duan1_vinh.ui.BieuDoThongKe.ThongKeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.duan1_vinh.ui.ThemKhoanThu.KhoanThuFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.duan1_vinh.ui.ThemKhoanChi.KhoanChiFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.duan1_vinh.ui.CaiDat.CaiDatFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_branch"
        android:name="com.example.duan1_vinh.ui.QuanLyNhom.QuanLyFragment"
        android:label="@string/menu_branch"
        tools:layout="@layout/fragment_tools" />
    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.duan1_vinh.ui.ThongKeChiTiet.ThongKeChiTietFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.duan1_vinh.ui.VeChungToi.VeChungToiFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>